Policy Cilium/Policy Cilium l7/prodcatalog-policy-lv7.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule-prodcat-lv7"
spec:
  description: "L7 policy for the productcatalog service"
  endpointSelector:
    matchLabels:
      app: productcatalogservice
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: recommendationservice
    toPorts:
    - ports:
      - port: "3550"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/hipstershop.ProductCatalogService/ListProducts"
  - fromEndpoints:
    - matchLabels:
        app: frontend
    toPorts:
    - ports:
      - port: "3550"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/grpc.health.v1.Health/Check"
        - method: "POST"
          path: "/hipstershop.ProductCatalogService/ListProducts"
        - method: "POST"
          path: "/hipstershop.ProductCatalogService/GetProduct"
  - fromEndpoints:
    - matchLabels:
        app: checkoutservice
    toPorts:
    - ports:
      - port: "3550"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/hipstershop.ProductCatalogService/GetProduct"
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*.default.svc.cluster.local"
